--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     compile 'net.sf.opencsv:opencsv:2.3'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.5'
     compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 }
