--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/stock_app_widget_info" />
         </receiver>
+
+        <service android:name=".widget.StockWidgetRemoteViewsService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
+            android:exported="false"
+            android:enabled="true"/>
     </application>
 
 </manifest>
