using a broadcast to refresh the widget with all the stocks listed on the app.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <receiver android:name=".widget.StockAppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.udacity.stockhawk.ACTION_WIDGET_DATA_UPDATED"/>
             </intent-filter>
 
             <meta-data
